# world-builder-dependencies

./: CMakeLists.txt  README.md
GeometricTools/: CMakeLists.txt
GeometricTools/Applications/: Application.cpp  Application.h  CameraRig.cpp  CameraRig.h  Command.cpp  Command.h  Console.h  ConsoleApplication.cpp  ConsoleApplication.h  Environment.cpp  Environment.h  GTApplications.cpp  GTApplications.h  GTApplicationsPCH.h  LogReporter.cpp  LogReporter.h  OnIdleTimer.cpp  OnIdleTimer.h  Timer.cpp  Timer.h  TrackBall.cpp  TrackBall.h  TrackCylinder.cpp  TrackCylinder.h  TrackObject.cpp  TrackObject.h  WICFileIO.h  Window2.cpp  Window2.h  Window3.cpp  Window3.h  WindowApplication.cpp  WindowApplication.h
GeometricTools/Applications/GLX/: Console.cpp  Console.h  ConsoleSystem.cpp  ConsoleSystem.h  WICFileIO.cpp  WICFileIO.h  Window.cpp  Window.h  WindowSystem.cpp  WindowSystem.h
GeometricTools/Applications/MSW/: Console.cpp  Console.h  ConsoleSystem.cpp  ConsoleSystem.h  LogToMessageBox.cpp  LogToMessageBox.h  LogToOutputWindow.cpp  LogToOutputWindow.h  WICFileIO.cpp  WICFileIO.h  Window.cpp  Window.h  WindowSystem.cpp  WindowSystem.h
GeometricTools/Graphics/: AmbientLightEffect.cpp  AmbientLightEffect.h  AreaLightEffect.cpp  AreaLightEffect.h  BaseEngine.cpp  BaseEngine.h  BillboardNode.cpp  BillboardNode.h  BlendState.cpp  BlendState.h  BlendTransformController.cpp  BlendTransformController.h  BoundingSphere.h  BspNode.cpp  BspNode.h  Buffer.cpp  Buffer.h  BumpMapEffect.cpp  BumpMapEffect.h  Camera.cpp  Camera.h  ComputeProgram.h  ConstantBuffer.cpp  ConstantBuffer.h  ConstantColorEffect.cpp  ConstantColorEffect.h  ControlledObject.cpp  ControlledObject.h  Controller.cpp  Controller.h  CubeMapEffect.cpp  CubeMapEffect.h  Culler.cpp  Culler.h  CullingPlane.h  DataFormat.cpp  DataFormat.h  DepthStencilState.cpp  DepthStencilState.h  DirectionalLightEffect.cpp  (+165 more)
GeometricTools/Graphics/DX11/: DX11.cpp  DX11.h  DX11BlendState.cpp  DX11BlendState.h  DX11Buffer.cpp  DX11Buffer.h  DX11ComputeShader.cpp  DX11ComputeShader.h  DX11ConstantBuffer.cpp  DX11ConstantBuffer.h  DX11DepthStencilState.cpp  DX11DepthStencilState.h  DX11DrawTarget.cpp  DX11DrawTarget.h  DX11DrawingState.cpp  DX11DrawingState.h  DX11Engine.cpp  DX11Engine.h  DX11GeometryShader.cpp  DX11GeometryShader.h  DX11GraphicsObject.cpp  DX11GraphicsObject.h  DX11IndexBuffer.cpp  DX11IndexBuffer.h  DX11IndirectArgumentsBuffer.cpp  DX11IndirectArgumentsBuffer.h  DX11InputLayout.cpp  DX11InputLayout.h  DX11InputLayoutManager.cpp  DX11InputLayoutManager.h  DX11PerformanceCounter.cpp  DX11PerformanceCounter.h  DX11PixelShader.cpp  DX11PixelShader.h  DX11RasterizerState.cpp  DX11RasterizerState.h  DX11RawBuffer.cpp  DX11RawBuffer.h  DX11Resource.cpp  DX11Resource.h  (+82 more)
GeometricTools/Graphics/GL45/: GL45.cpp  GL45.h  GL45AtomicCounterBuffer.cpp  GL45AtomicCounterBuffer.h  GL45BlendState.cpp  GL45BlendState.h  GL45Buffer.cpp  GL45Buffer.h  GL45ConstantBuffer.cpp  GL45ConstantBuffer.h  GL45DepthStencilState.cpp  GL45DepthStencilState.h  GL45DrawTarget.cpp  GL45DrawTarget.h  GL45DrawingState.cpp  GL45DrawingState.h  GL45Engine.cpp  GL45Engine.h  GL45GraphicsObject.cpp  GL45GraphicsObject.h  GL45IndexBuffer.cpp  GL45IndexBuffer.h  GL45InputLayout.cpp  GL45InputLayout.h  GL45InputLayoutManager.cpp  GL45InputLayoutManager.h  GL45RasterizerState.cpp  GL45RasterizerState.h  GL45Resource.cpp  GL45Resource.h  GL45SamplerState.cpp  GL45SamplerState.h  GL45StructuredBuffer.cpp  GL45StructuredBuffer.h  GL45Texture.cpp  GL45Texture.h  GL45Texture1.cpp  GL45Texture1.h  GL45Texture1Array.cpp  GL45Texture1Array.h  (+33 more)
GeometricTools/Mathematics/: ACosEstimate.h  APConversion.h  ASinEstimate.h  ATanEstimate.h  AdaptiveSkeletonClimbing2.h  AdaptiveSkeletonClimbing3.h  AlignedBox.h  ApprCircle2.h  ApprCone3.h  ApprCylinder3.h  ApprEllipse2.h  ApprEllipseByArcs.h  ApprEllipsoid3.h  ApprGaussian2.h  ApprGaussian3.h  ApprGreatCircle3.h  ApprHeightLine2.h  ApprHeightPlane3.h  ApprOrthogonalLine2.h  ApprOrthogonalLine3.h  ApprOrthogonalPlane3.h  ApprParaboloid3.h  ApprPolynomial2.h  ApprPolynomial3.h  ApprPolynomial4.h  ApprPolynomialSpecial2.h  ApprPolynomialSpecial3.h  ApprPolynomialSpecial4.h  ApprQuadratic2.h  ApprQuadratic3.h  ApprQuery.h  ApprSphere3.h  ApprTorus3.h  ArbitraryPrecision.h  Arc2.h  Array2.h  Array3.h  Array4.h  AtomicMinMax.h  AxisAngle.h  (+389 more)
GeometricTools/Mathematics/GPU/: GPUFluid2.cpp  GPUFluid2.h  GPUFluid2AdjustVelocity.cpp  GPUFluid2AdjustVelocity.h  GPUFluid2ComputeDivergence.cpp  GPUFluid2ComputeDivergence.h  GPUFluid2EnforceStateBoundary.cpp  GPUFluid2EnforceStateBoundary.h  GPUFluid2InitializeSource.cpp  GPUFluid2InitializeSource.h  GPUFluid2InitializeState.cpp  GPUFluid2InitializeState.h  GPUFluid2Parameters.h  GPUFluid2SolvePoisson.cpp  GPUFluid2SolvePoisson.h  GPUFluid2UpdateState.cpp  GPUFluid2UpdateState.h  GPUFluid3.cpp  GPUFluid3.h  GPUFluid3AdjustVelocity.cpp  GPUFluid3AdjustVelocity.h  GPUFluid3ComputeDivergence.cpp  GPUFluid3ComputeDivergence.h  GPUFluid3EnforceStateBoundary.cpp  GPUFluid3EnforceStateBoundary.h  GPUFluid3InitializeSource.cpp  GPUFluid3InitializeSource.h  GPUFluid3InitializeState.cpp  GPUFluid3InitializeState.h  GPUFluid3Parameters.h  GPUFluid3SolvePoisson.cpp  GPUFluid3SolvePoisson.h  GPUFluid3UpdateState.cpp  GPUFluid3UpdateState.h  GPUGenerateMeshUV.h  GTMathematicsGPU.cpp  GTMathematicsGPU.h  GTMathematicsGPUPCH.h
GeometricTools/Tools/BitmapFontCreator/: BitmapFontCreator.cpp  BitmapFontCreator.v14.sln  BitmapFontCreator.v14.vcxproj  BitmapFontCreator.v15.sln  BitmapFontCreator.v15.vcxproj  BitmapFontCreator.v16.vcxproj
GeometricTools/Tools/GenerateProject/: GenerateProject.cpp  GenerateProject.v14.sln  GenerateProject.v14.vcxproj  GenerateProject.v14.vcxproj.filters  GenerateProject.v15.sln  GenerateProject.v15.vcxproj  GenerateProject.v15.vcxproj.filters  GenerateProject.v16.vcxproj  GenerateProject.v16.vcxproj.filters  ProjectTemplate.cpp  ProjectTemplate.h  ProjectTemplate.v14.cpp  ProjectTemplate.v14.h  ProjectTemplate.v15.cpp  ProjectTemplate.v15.h  ProjectTemplate.v16.cpp  (+1 more)
(+6 files in other folders)
