
add_library(Mathematics INTERFACE)
add_library(GeometricTools::Mathematics ALIAS Mathematics)
  
target_sources_interface(Mathematics
  ACosEstimate.h
  AdaptiveSkeletonClimbing2.h
  AdaptiveSkeletonClimbing3.h
  AlignedBox.h
  APConversion.h
  ApprCircle2.h
  ApprCone3.h
  ApprCylinder3.h
  ApprEllipse2.h
  ApprEllipseByArcs.h
  ApprEllipsoid3.h
  ApprGaussian2.h
  ApprGaussian3.h
  ApprGreatCircle3.h
  ApprHeightLine2.h
  ApprHeightPlane3.h
  ApprOrthogonalLine2.h
  ApprOrthogonalLine3.h
  ApprOrthogonalPlane3.h
  ApprParaboloid3.h
  ApprPolynomial2.h
  ApprPolynomial3.h
  ApprPolynomial4.h
  ApprPolynomialSpecial2.h
  ApprPolynomialSpecial3.h
  ApprPolynomialSpecial4.h
  ApprQuadratic2.h
  ApprQuadratic3.h
  ApprQuery.h
  ApprSphere3.h
  ApprTorus3.h
  ArbitraryPrecision.h
  Arc2.h
  Array2.h
  Array3.h
  Array4.h
  ASinEstimate.h
  ATanEstimate.h
  AtomicMinMax.h
  AxisAngle.h
  BandedMatrix.h
  BasisFunction.h
  BezierCurve.h
  BitHacks.h
  BoxManager.h
  BSNumber.h
  BSplineCurveFit.h
  BSplineCurve.h
  BSplineGeodesic.h
  BSplineReduction.h
  BSplineSurfaceFit.h
  BSplineSurface.h
  BSplineVolume.h
  BSPPolygon2.h
  BSPrecision.h
  BSRational.h
  Capsule.h
  ChebyshevRatio.h
  CholeskyDecomposition.h
  Circle3.h
  CLODPolyline.h
  Cone.h
  ConformalMapGenus0.h
  ConstrainedDelaunay2.h
  ContAlignedBox.h
  ContCapsule3.h
  ContCircle2.h
  ContCone.h
  ContCylinder3.h
  ContEllipse2.h
  ContEllipse2MinCR.h
  ContEllipsoid3.h
  ContEllipsoid3MinCR.h
  ContLozenge3.h
  ContOrientedBox2.h
  ContOrientedBox3.h
  ContPointInPolygon2.h
  ContPointInPolyhedron3.h
  ContScribeCircle2.h
  ContScribeCircle3Sphere3.h
  ContSphere3.h
  ConvertCoordinates.h
  ConvexHull2.h
  ConvexHull3.h
  ConvexPolyhedron3.h
  CosEstimate.h
  CubicRootsQR.h
  CurvatureFlow2.h
  CurvatureFlow3.h
  CurveExtractor.h
  CurveExtractorSquares.h
  CurveExtractorTriangles.h
  Cylinder3.h
  DarbouxFrame.h
  DCPQuery.h
  Delaunay2.h
  Delaunay2Mesh.h
  Delaunay3.h
  Delaunay3Mesh.h
  DisjointIntervals.h
  DisjointRectangles.h
  DistAlignedBox3OrientedBox3.h
  DistAlignedBoxAlignedBox.h
  DistCircle3Circle3.h
  DistLine3AlignedBox3.h
  DistLine3Circle3.h
  DistLine3OrientedBox3.h
  DistLine3Rectangle3.h
  DistLine3Triangle3.h
  DistLineLine.h
  DistLineRay.h
  DistLineSegment.h
  DistOrientedBox3OrientedBox3.h
  DistPoint3Circle3.h
  DistPoint3ConvexPolyhedron3.h
  DistPoint3Cylinder3.h
  DistPoint3Frustum3.h
  DistPoint3Plane3.h
  DistPoint3Rectangle3.h
  DistPoint3Tetrahedron3.h
  DistPointAlignedBox.h
  DistPointHyperellipsoid.h
  DistPointLine.h
  DistPointOrientedBox.h
  DistPointRay.h
  DistPointSegment.h
  DistPointTriangleExact.h
  DistPointTriangle.h
  DistRay3AlignedBox3.h
  DistRay3OrientedBox3.h
  DistRay3Rectangle3.h
  DistRay3Triangle3.h
  DistRayRay.h
  DistRaySegment.h
  DistRectangle3AlignedBox3.h
  DistRectangle3OrientedBox3.h
  DistRectangle3Rectangle3.h
  DistSegment3AlignedBox3.h
  DistSegment3OrientedBox3.h
  DistSegment3Rectangle3.h
  DistSegment3Triangle3.h
  DistSegmentSegmentExact.h
  DistSegmentSegment.h
  DistTriangle3AlignedBox3.h
  DistTriangle3OrientedBox3.h
  DistTriangle3Rectangle3.h
  DistTriangle3Triangle3.h
  EdgeKey.h
  Ellipse3.h
  EllipsoidGeodesic.h
  ETManifoldMesh.h
  ETNonmanifoldMesh.h
  EulerAngles.h
  Exp2Estimate.h
  ExpEstimate.h
  ExtremalQuery3BSP.h
  ExtremalQuery3.h
  ExtremalQuery3PRJ.h
  FastGaussianBlur1.h
  FastGaussianBlur2.h
  FastGaussianBlur3.h
  FastMarch2.h
  FastMarch3.h
  FastMarch.h
  FeatureKey.h
  FIQuery.h
  FrenetFrame.h
  Frustum3.h
  GaussianBlur2.h
  GaussianBlur3.h
  GaussianElimination.h
  GaussNewtonMinimizer.h
  GenerateMeshUV.h
  GMatrix.h
  GPU
  GradientAnisotropic2.h
  GradientAnisotropic3.h
  GVector.h
  Halfspace.h
  Histogram.h
  Hyperellipsoid.h
  Hyperplane.h
  Hypersphere.h
  IEEEBinary16.h
  IEEEBinary.h
  Image2.h
  Image3.h
  Image.h
  ImageUtility2.h
  ImageUtility3.h
  IndexAttribute.h
  Integration.h
  IntpAkima1.h
  IntpAkimaNonuniform1.h
  IntpAkimaUniform1.h
  IntpAkimaUniform2.h
  IntpAkimaUniform3.h
  IntpBicubic2.h
  IntpBilinear2.h
  IntpBSplineUniform.h
  IntpLinearNonuniform2.h
  IntpLinearNonuniform3.h
  IntpQuadraticNonuniform2.h
  IntpSphere2.h
  IntpThinPlateSpline2.h
  IntpThinPlateSpline3.h
  IntpTricubic3.h
  IntpTrilinear3.h
  IntpVectorField2.h
  IntrAlignedBox2AlignedBox2.h
  IntrAlignedBox2Circle2.h
  IntrAlignedBox2OrientedBox2.h
  IntrAlignedBox3AlignedBox3.h
  IntrAlignedBox3Cone3.h
  IntrAlignedBox3Cylinder3.h
  IntrAlignedBox3OrientedBox3.h
  IntrAlignedBox3Sphere3.h
  IntrArc2Arc2.h
  IntrCapsule3Capsule3.h
  IntrCircle2Arc2.h
  IntrCircle2Circle2.h
  IntrConvexPolygonHyperplane.h
  IntrDisk2Sector2.h
  IntrEllipse2Ellipse2.h
  IntrEllipsoid3Ellipsoid3.h
  IntrHalfspace2Polygon2.h
  IntrHalfspace3Capsule3.h
  IntrHalfspace3Cylinder3.h
  IntrHalfspace3Ellipsoid3.h
  IntrHalfspace3OrientedBox3.h
  IntrHalfspace3Segment3.h
  IntrHalfspace3Sphere3.h
  IntrHalfspace3Triangle3.h
  IntrIntervals.h
  IntrLine2AlignedBox2.h
  IntrLine2Arc2.h
  IntrLine2Circle2.h
  IntrLine2Line2.h
  IntrLine2OrientedBox2.h
  IntrLine2Ray2.h
  IntrLine2Segment2.h
  IntrLine2Triangle2.h
  IntrLine3AlignedBox3.h
  IntrLine3Capsule3.h
  IntrLine3Cone3.h
  IntrLine3Cylinder3.h
  IntrLine3Ellipsoid3.h
  IntrLine3OrientedBox3.h
  IntrLine3Plane3.h
  IntrLine3Sphere3.h
  IntrLine3Triangle3.h
  IntrOrientedBox2Circle2.h
  IntrOrientedBox2Cone2.h
  IntrOrientedBox2OrientedBox2.h
  IntrOrientedBox2Sector2.h
  IntrOrientedBox3Cone3.h
  IntrOrientedBox3Cylinder3.h
  IntrOrientedBox3Frustum3.h
  IntrOrientedBox3OrientedBox3.h
  IntrOrientedBox3Sphere3.h
  IntrPlane3Capsule3.h
  IntrPlane3Circle3.h
  IntrPlane3Cylinder3.h
  IntrPlane3Ellipsoid3.h
  IntrPlane3OrientedBox3.h
  IntrPlane3Plane3.h
  IntrPlane3Sphere3.h
  IntrPlane3Triangle3.h
  IntrRay2AlignedBox2.h
  IntrRay2Arc2.h
  IntrRay2Circle2.h
  IntrRay2OrientedBox2.h
  IntrRay2Ray2.h
  IntrRay2Segment2.h
  IntrRay2Triangle2.h
  IntrRay3AlignedBox3.h
  IntrRay3Capsule3.h
  IntrRay3Cone3.h
  IntrRay3Cylinder3.h
  IntrRay3Ellipsoid3.h
  IntrRay3OrientedBox3.h
  IntrRay3Plane3.h
  IntrRay3Sphere3.h
  IntrRay3Triangle3.h
  IntrSegment2AlignedBox2.h
  IntrSegment2Arc2.h
  IntrSegment2Circle2.h
  IntrSegment2OrientedBox2.h
  IntrSegment2Segment2.h
  IntrSegment2Triangle2.h
  IntrSegment3AlignedBox3.h
  IntrSegment3Capsule3.h
  IntrSegment3Cone3.h
  IntrSegment3Cylinder3.h
  IntrSegment3Ellipsoid3.h
  IntrSegment3OrientedBox3.h
  IntrSegment3Plane3.h
  IntrSegment3Sphere3.h
  IntrSegment3Triangle3.h
  IntrSphere3Cone3.h
  IntrSphere3Frustum3.h
  IntrSphere3Sphere3.h
  IntrSphere3Triangle3.h
  IntrTriangle2Triangle2.h
  IntrTriangle3OrientedBox3.h
  InvSqrtEstimate.h
  IsPlanarGraph.h
  LCPSolver.h
  LevenbergMarquardtMinimizer.h
  LexicoArray2.h
  LinearSystem.h
  Line.h
  Log2Estimate.h
  LogEstimate.h
  Logger.h
  LogToFile.h
  LogToStdout.h
  LogToStringArray.h
  Lozenge3.h
  MarchingCubes.h
  MassSpringArbitrary.h
  MassSpringCurve.h
  MassSpringSurface.h
  MassSpringVolume.h
  Math.h
  Matrix2x2.h
  Matrix3x3.h
  Matrix4x4.h
  Matrix.h
  MeshCurvature.h
  Mesh.h
  MinHeap.h
  MinimalCycleBasis.h
  Minimize1.h
  MinimizeN.h
  MinimumAreaBox2.h
  MinimumAreaCircle2.h
  MinimumVolumeBox3.h
  MinimumVolumeSphere3.h
  NaturalSplineCurve.h
  NearestNeighborQuery.h
  NURBSCircle.h
  NURBSCurve.h
  NURBSSphere.h
  NURBSSurface.h
  NURBSVolume.h
  OBBTreeOfPoints.h
  OdeEuler.h
  OdeImplicitEuler.h
  OdeMidpoint.h
  OdeRungeKutta4.h
  OdeSolver.h
  OrientedBox.h
  ParametricCurve.h
  ParametricSurface.h
  ParticleSystem.h
  PdeFilter1.h
  PdeFilter2.h
  PdeFilter3.h
  PdeFilter.h
  PlanarMesh.h
  Polygon2.h
  PolyhedralMassProperties.h
  Polyhedron3.h
  Polynomial1.h
  PolynomialCurve.h
  PrimalQuery2.h
  PrimalQuery3.h
  Projection.h
  QFNumber.h
  QuadricSurface.h
  QuarticRootsQR.h
  Quaternion.h
  RangeIteration.h
  Ray.h
  Rectangle.h
  RectangleManager.h
  RectangleMesh.h
  RectanglePatchMesh.h
  RevolutionMesh.h
  RiemannianGeodesic.h
  RigidBody.h
  RootsBisection.h
  RootsBrentsMethod.h
  RootsPolynomial.h
  Rotation.h
  Sector2.h
  Segment.h
  SeparatePoints2.h
  SeparatePoints3.h
  SharedPtrCompare.h
  SinEstimate.h
  SingularValueDecomposition.h
  SlerpEstimate.h
  SplitMeshByPlane.h
  SqrtEstimate.h
  StringUtility.h
  SurfaceExtractorCubes.h
  SurfaceExtractor.h
  SurfaceExtractorMC.h
  SurfaceExtractorTetrahedra.h
  SymmetricEigensolver2x2.h
  SymmetricEigensolver3x3.h
  SymmetricEigensolver.h
  TanEstimate.h
  TCBSplineCurve.h
  Tetrahedron3.h
  TetrahedronKey.h
  ThreadSafeMap.h
  ThreadSafeQueue.h
  TIQuery.h
  Torus3.h
  Transform.h
  Triangle.h
  TriangleKey.h
  TriangulateCDT.h
  TriangulateEC.h
  TSManifoldMesh.h
  TubeMesh.h
  UIntegerALU32.h
  UIntegerAP32.h
  UIntegerFP32.h
  UniqueVerticesTriangles.h
  UnsymmetricEigenvalues.h
  Vector2.h
  Vector3.h
  Vector4.h
  Vector.h
  VEManifoldMesh.h
  VertexAttribute.h
  VertexCollapseMesh.h
  VETManifoldMesh.h
  VETNonmanifoldMesh.h
  WeakPtrCompare.h
  )

target_include_directories(Mathematics
    INTERFACE 
        $<INSTALL_INTERFACE:include>    
        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
)

install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/Mathematics
  DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/GeometricTools
  FILES_MATCHING PATTERN "*.h"
  PATTERN "GPU" EXCLUDE
  )

install(TARGETS Mathematics
    EXPORT geometrictools-mathematics-targets
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
    )
  
install(EXPORT geometrictools-mathematics-targets
  FILE
    geometrictools-mathematics-Targets.cmake
  NAMESPACE
    GeometricTools::
  DESTINATION
    ${CMAKE_INSTALL_LIBDIR}/cmake/WorldBuilderDependencies
    )
